# barrucadu.dev

./: README.markdown  bootstrap.sh  deploy-pipeline.sh
barrucadu.co.uk-builder/: Dockerfile  config.nix
event-api-resource/src/: check  in  out
event-api-server/: Dockerfile  event-api-server.cabal  stack.yaml
event-api-server/src/: API.hs  Database.hs  Main.hs  Server.hs  Util.hs
event-api-server/src/Database/: Migrations.hs
feed-resource/: Dockerfile
feed-resource/src/: check  in  out
frontend/: requirements-freeze.txt  requirements.txt
frontend/src/: serve.py
frontend/src/static/: style.css
frontend/src/templates/: atom.xml  index.html
lainon.life-builder/: Dockerfile
pipelines/: _library.libsonnet  _simple_haskell.libsonnet  barrucadu.co.uk.jsonnet  barrucadu.co.uk.yaml  barrucadu.dev.jsonnet  barrucadu.dev.yaml  dejafu.jsonnet  dejafu.yaml  docker-misc.jsonnet  haskell-irc.jsonnet  haskell-misc.jsonnet  lainon.life.jsonnet  lookwhattheshoggothdraggedin.com.jsonnet  pleroma.jsonnet  uzbl.org.jsonnet  uzbl.org.yaml
rsync-resource/: Dockerfile  README
rsync-resource/src/: check  in  out
tag-builder/: Dockerfile
