cabal-version:       >=1.10

name:                event-api-server
version:             0.0.0.0
author:              Michael Walker
maintainer:          mike@barrucadu.co.uk
build-type:          Simple

executable event-api-server
  main-is:             Main.hs
  build-depends:       base
                     , aeson
                     , base64-bytestring
                     , bytestring
                     , exceptions
                     , mtl
                     , postgresql-simple
                     , postgresql-simple-migration
                     , selda
                     , selda-postgresql
                     , servant
                     , servant-auth
                     , servant-auth-server
                     , servant-server
                     , splitmix
                     , text
                     , time
                     , uuid
                     , warp
  other-modules:       API
                     , Database
                     , Database.Migrations
                     , Server
                     , Util
  default-language:    Haskell2010
  hs-source-dirs:    src
  ghc-options:       -Wall
